--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello Redux - Counter</title>
-</head>
-<body>
-    
-   <script src="main.js"></script> 
-</body>
+  </head>
+  <body>
+      
+    <h1>0</h1>
+    <button>-</button>
+    <button>+</button>
+
+    <script src="main.js"></script>
+  </body>
 </html>
