--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Redux - Counter</title>
+    <title>Hello - 2 - Redux - Counter</title>
   </head>
   <body>
-      
     <h1>0</h1>
     <button>-</button>
     <button>+</button>
 
     <script src="main.js"></script>
+    <script src="//unpkg.com/redux@latest/dist/redux.min.js"></script>
   </body>
 </html>
