--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button>+</button>
 
     <script src="main.js"></script>
-    <script src="//unpkg.com/redux@latest/dist/redux.min.js"></script>
+    <script src="testes.js"></script>
+    <script src="//unpkg.com/redux@3.7.2/dist/redux.min.js"></script>
   </body>
 </html>
